Fix contrast of edit button

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -80,7 +80,3 @@ body {
         max-width: none;
     }
 }
-
-.edit_link {
-    color: pink;
-}
